examples/test/testpolicy12232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12232
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key7: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value16
          key17: value10
      podSelector:
        matchLabels:
          key1: value10
          key13: value37
